# practice_cuda

book/: 01.vecAdd.cu  02.colorToGray.cu  CMakeLists.txt
template/: CMakeLists.txt  main.cpp
template/kernels/: test.cu  test.cuh
vision/: CMakeLists.txt  bilateral_filter.cpp  bilateral_filter.cu  box_filter.cpp  box_filter.cu  resize.cpp  resize.cu  sort.cpp  sort.cu
